ufoai-data (0.0.svn) unstable; urgency=low

  * SVN snapshot.
  * Do not provides ufoai-music any more.
  * Adapted packaging to svn layout.
  * Build data from source using ufoai-tools.
  * Removed integration of 3rd-party scenarios in the campaign, removed
    dep on ufoai-common.
  * Automatically update package version to use SVN revision number when
    run from a SVN working copy.

 -- Yann Dirson <dirson@debian.org>  Thu,  2 Mar 2006 02:01:57 +0100

ufoai-data (0.0.040218-0.3.1) unstable; urgency=low

  * Added note about UDP port 27910 in multiplayer.html.
  * Added description of player stats in howtoplay.html, from
    http://ufo.myexp.de/phpBB2/viewtopic.php?p=2378

 -- Yann Dirson <dirson@debian.org>  Tue, 11 May 2004 16:52:57 +0200

ufoai-data (0.0.040218-0.3) unstable; urgency=low

  * Added more keybindings, making nearly all PoV commands available on
    keypad.
  * Removed main campaign block from upstream campaign.ufo, use
    update-ufoai-campaign to generate the block.  Depend on ufoai-common for
    this.

 -- Yann Dirson <dirson@debian.org>  Mon, 19 Apr 2004 00:36:46 +0200

ufoai-data (0.0.040218-0.2) unstable; urgency=low

  * Do not install the /usr/lib/games/ufoai/base/save/ dir anymore, as it
    is useless and not having it simplifies the setup work in the wrapper
    script.

 -- Yann Dirson <dirson@debian.org>  Fri, 16 Apr 2004 22:23:31 +0200

ufoai-data (0.0.040218-0.1) unstable; urgency=low

  * Added music files, regenerated "upstream" tarball to include them.

 -- Yann Dirson <dirson@debian.org>  Thu, 15 Apr 2004 23:07:17 +0200

ufoai-data (0.0.040218-0) unstable; urgency=low

  * Initial Release.

 -- Yann Dirson <dirson@debian.org>  Thu, 15 Apr 2004 00:51:26 +0200
