@@ -1,4 +1,7 @@
 *.cfg /usr/lib/games/ufoai/base/
 maps /usr/lib/games/ufoai/base/
+music /usr/lib/games/ufoai/base/
 pics /usr/lib/games/ufoai/base/
+sound /usr/lib/games/ufoai/base/
+textures /usr/lib/games/ufoai/base/
 ufos /usr/lib/games/ufoai/base/
