@@ -5,11 +5,16 @@ ufoai-data (0.0.svn) unstable; urgency=low
   * Adapted packaging to svn layout.
   * Build data from source using ufoai-tools.
   * Removed integration of 3rd-party scenarios in the campaign, removed
-    dep on ufoai-common.
+    dep on obsolete ufoai-common.
   * Automatically update package version to use SVN revision number when
     run from a SVN working copy.
+  * Added dependency on ttf-freefont and ttf-defavu and symlink to those
+    fonts.
+  
+  * Includes the textures although their copyright status still has to be
+    audited.
 
- -- Yann Dirson <dirson@debian.org>  Thu,  2 Mar 2006 02:01:57 +0100
+ -- Yann Dirson <dirson@debian.org>  Sun, 23 Apr 2006 17:47:43 +0200
 
 ufoai-data (0.0.040218-0.3.1) unstable; urgency=low
 
